--- a/trunk/alquilook/css/alquilook.css
+++ b/trunk/alquilook/css/alquilook.css
@@ -9,6 +9,8 @@ by Museographia Espacios Expositivos
 	#ef501e  coral sands 
 */
 
+/*---Canary man, que te gusta un Itaka---*/
+
 /*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------Textos--------------------*/
 
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:100);
