--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -2004,7 +2004,6 @@ select[multiple].input-lg {
           user-select: none;
   background-image: none;
   border: 1px solid transparent;
-  border-radius: 4px;
 }
 .btn:focus {
   outline: thin dotted;
@@ -2076,8 +2075,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #e51e50;
+  border-color: #e51e50;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -2085,8 +2084,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+  background-color: #ef501e ;
+  border-color: #ef501e ;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -2108,8 +2107,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #afafaf;
+  border-color: #AFAFAF;
 }
 .btn-primary .badge {
   color: #428bca;
@@ -2316,19 +2315,16 @@ fieldset[disabled] .btn-link:focus {
   padding: 10px 16px;
   font-size: 18px;
   line-height: 1.33;
-  border-radius: 6px;
 }
 .btn-sm {
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
-  border-radius: 3px;
 }
 .btn-xs {
   padding: 1px 5px;
   font-size: 12px;
   line-height: 1.5;
-  border-radius: 3px;
 }
 .btn-block {
   display: block;
