--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -63,8 +63,8 @@ h4{
 	}
 	
 h5{
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif !important;
-	font-size:1em;
+	font-family: 'RobotoSlab-Thin', 'Roboto Slab', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
+	font-size:1.2em;
 	}	
 
 h2.banner{
@@ -223,8 +223,30 @@ body {
 
 .imagenbanner{
 	width: 120px;
+	float: left !important;
 }
 
+.imagenboton{
+	width: 75px;
+}
+
+a.imagenboton{
+	width: 75px;
+	opacity: 1.0;
+	filter:alpha(opacity=100);
+}
+
+a.imagenboton:hover,
+a.imagenboton:active,
+a.imagenboton:focus{
+	opacity: 0.80;
+	filter:alpha(opacity=80); 
+}
+
+
+.columnapropietario{
+border-right: 1px solid #e51e50;
+}
 
 .tab-pane {
   margin-top: 15px;
@@ -334,11 +356,16 @@ body {
 @media (max-width: 767px) {
 	
 .imagen{
-	width: 75px;
+	width: 100px;
 }
 
 .imagenbanner{
-	width: 75px;
+	width: 100px;
+	float: left !important;
+}
+
+.imagenboton{
+	width: 50px;
 }
 
 
@@ -385,6 +412,11 @@ h3{
 h4{
 	font-family: 'RobotoSlab-Thin', 'Roboto Slab',"Trebuchet MS", Arial, Helvetica, sans-serif !important;
 	font-size:1.1em;
+	}	
+	
+h5{
+	font-family: 'RobotoSlab-Thin', 'Roboto Slab',"Trebuchet MS", Arial, Helvetica, sans-serif !important;
+	font-size:1em;
 	}	
 
 }
