--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -63,7 +63,13 @@ h4{
 	}
 	
 h5{
-	font-family: 'RobotoSlab-Thin', 'Roboto Slab', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif !important;
+	font-size:1.2em;
+	}	
+	
+h5.columnapropietario{
+	color:#e51e50 ;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif !important;
 	font-size:1.2em;
 	}	
 
@@ -234,18 +240,29 @@ a.imagenboton{
 	width: 75px;
 	opacity: 1.0;
 	filter:alpha(opacity=100);
+	-moz-transition:-moz-transform 0.2s ease-in; 
+	-webkit-transition:-webkit-transform 0.2s ease-in; 
+	-o-transition:-o-transform 0.1s ease-in;
+
 }
 
 a.imagenboton:hover,
 a.imagenboton:active,
 a.imagenboton:focus{
-	opacity: 0.80;
-	filter:alpha(opacity=80); 
+	opacity: 0.90;
+	filter:alpha(opacity=90); 
+	-moz-transform:scale(1.2); 
+	-webkit-transform:scale(1.2);
+	-o-transform:scale(1.2);	
 }
 
+.columnaizda{
+	background-color: #f5f5f5;
+}
 
-.columnapropietario{
-border-right: 1px solid #e51e50;
+.columnadcha{
+	background-color: #dcdcdc;
+	height: 100%;
 }
 
 .tab-pane {
@@ -253,17 +270,17 @@ border-right: 1px solid #e51e50;
 }
 
 /* Page Sections */
-.section,
-.section-colored,
-.section-colored2 {
-  padding: 10px 0;
+.section{
+  padding: 0 0;
 }
 
 .section-colored {
+	padding: 10px 0;
   background-color: #e51e50;
 }
 
 .section-colored2 {
+	padding: 10px 0;
   background-color: #ef501e;
 }
 
@@ -415,7 +432,13 @@ h4{
 	}	
 	
 h5{
-	font-family: 'RobotoSlab-Thin', 'Roboto Slab',"Trebuchet MS", Arial, Helvetica, sans-serif !important;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif !important;
+	font-size:1em;
+	}	
+
+h5.columnapropietario{
+	color:#e51e50 ;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif !important;
 	font-size:1em;
 	}	
 
