--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -3764,7 +3764,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-toggle {
   position: relative;
   float: right;
-  padding: 32px 10px;
+  padding: 32px 10px 0 0;
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 1px;
