--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -73,6 +73,12 @@ h5.columnapropietario{
 	font-size:1.2em;
 	}	
 
+h6.columnapropietario{
+	color:#e51e50 ;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif !important;
+	font-size:1em;
+	}	
+
 h2.banner{
 	color:#FFFFFF;
 	font-family: 'Bariol-Light', 'Varela Round', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
@@ -240,8 +246,12 @@ body {
 	width: 75px;
 }
 
-a.imagenboton{
-	width: 75px;
+.imagenboton2{
+	width: 50px;
+}
+
+a.imagenboton,
+a.imagenboton2{
 	opacity: 1.0;
 	filter:alpha(opacity=100);
 	-moz-transition:-moz-transform 0.2s ease-in; 
@@ -252,7 +262,10 @@ a.imagenboton{
 
 a.imagenboton:hover,
 a.imagenboton:active,
-a.imagenboton:focus{
+a.imagenboton:focus,
+a.imagenboton2:hover,
+a.imagenboton2:active,
+a.imagenboton2:focus{
 	opacity: 0.90;
 	filter:alpha(opacity=90); 
 	-moz-transform:scale(1.2); 
@@ -386,8 +399,13 @@ a.imagenboton:focus{
 }
 
 .imagenboton{
-	width: 50px;
+	width: 55px;
 }
+
+.imagenboton2{
+	width: 45px;
+}
+
 
 
 .carousel {
@@ -445,5 +463,12 @@ h5.columnapropietario{
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif !important;
 	font-size:1em;
 	}	
+
+h6.columnapropietario{
+	color:#e51e50 ;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif !important;
+	font-size:0.9em;
+	}	
+
 
 }
