--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -1688,6 +1688,7 @@ output {
   color: #555;
 }
 .form-control {
+	margin-bottom: 10px;
   display: block;
   width: 100%;
   height: 34px;
@@ -1928,7 +1929,7 @@ select[multiple].input-lg {
 @media (min-width: 768px) {
   .form-inline .form-group {
     display: inline-block;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     vertical-align: middle;
   }
   .form-inline .form-control {
