--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -220,8 +220,8 @@ hr.inquilino{
 }
 
 hr.inmueble{
-	color: #FFFFFF;
-	background-color:#FFFFFF;
+	color: #f5f5f5;
+	background-color:#f5f5f5;
 	height: 1px;
 	width:100%;
 	margin:5px;
@@ -293,8 +293,7 @@ a.imagenboton2:focus{
 }
 
 .columnadcha{
-	background-color: #e6e6e6;
-	height: 100%;
+	background-color: #FFFFFF;
 }
 
 .tab-pane {
