--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -289,12 +289,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #428bca;
+  color: #e51e50;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #2a6496;
+  color: #e51e50;
   text-decoration: underline;
 }
 a:focus {
@@ -499,7 +499,7 @@ cite {
   color: #999;
 }
 .text-primary {
-  color: #428bca;
+  color: #e51e50;
 }
 a.text-primary:hover {
   color: #3071a9;
@@ -530,7 +530,7 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #428bca;
+  background-color: #e51e50;
 }
 a.bg-primary:hover {
   background-color: #3071a9;
@@ -2114,7 +2114,7 @@ fieldset[disabled] .btn-primary.active {
   border-color: #AFAFAF;
 }
 .btn-primary .badge {
-  color: #428bca;
+  color: #e51e50;
   background-color: #fff;
 }
 .btn-success {
@@ -2283,7 +2283,7 @@ fieldset[disabled] .btn-danger.active {
 }
 .btn-link {
   font-weight: normal;
-  color: #428bca;
+  color: #e51e50;
   cursor: pointer;
   border-radius: 0;
 }
@@ -2303,7 +2303,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #2a6496;
+  color: #e51e50;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3048,7 +3048,7 @@ input[type="button"].btn-block {
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #428bca;
+  background-color: #e51e50;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
@@ -3488,7 +3488,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eee;
-  border-color: #428bca;
+  border-color: #e51e50;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3581,7 +3581,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #428bca;
+  background-color: #e51e50;
 }
 .nav-stacked > li {
   float: none;
@@ -4151,7 +4151,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.428571429;
-  color: #428bca;
+  color: #e51e50;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4171,7 +4171,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #2a6496;
+  color: #e51e50;
   background-color: #eee;
   border-color: #ddd;
 }
@@ -4184,8 +4184,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   z-index: 2;
   color: #fff;
   cursor: default;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #e51e50;
+  border-color: #e51e50;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -4299,7 +4299,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #808080;
 }
 .label-primary {
-  background-color: #428bca;
+  background-color: #e51e50;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
@@ -4366,7 +4366,7 @@ a.badge:focus {
 }
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #428bca;
+  color: #e51e50;
   background-color: #fff;
 }
 .nav-pills > li > a > .badge {
@@ -4429,7 +4429,7 @@ a.list-group-item.active > .badge,
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #428bca;
+  border-color: #e51e50;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4541,7 +4541,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #428bca;
+  background-color: #e51e50;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
   -webkit-transition: width .6s ease;
@@ -4655,8 +4655,8 @@ a.list-group-item.active:hover,
 a.list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #e51e50;
+  border-color: #e51e50;
 }
 a.list-group-item.active .list-group-item-heading,
 a.list-group-item.active:hover .list-group-item-heading,
@@ -4978,18 +4978,18 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #428bca;
+  border-color: #e51e50;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #e51e50;
+  border-color: #e51e50;
 }
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #428bca;
+  border-top-color: #e51e50;
 }
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #428bca;
+  border-bottom-color: #e51e50;
 }
 .panel-success {
   border-color: #d6e9c6;
