--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -122,7 +122,7 @@ a.enlacefooter:focus{
 	color:#ffffff;
 	outline: 0;
 	text-decoration:none;
-	opacity:0.66;
+	opacity:0.80;
 
 }
 
@@ -157,7 +157,9 @@ ul li.menu{
 
 /*---------------------------------------------------------------------------------------------------------------------------------------------------------Menu--------------------*/
 a.enlace{
-    color:#e51e50; /* blooming magenta */	
+    color:#e51e50; /* blooming magenta */
+   	opacity: 1.0;
+	filter:alpha(opacity=100);	
 	text-decoration: none;
 	cursor: pointer;
 	
@@ -170,7 +172,9 @@ a.enlace{
 a.enlace:hover,
 a.enlace:active,
 a.enlace:focus{
-	color:#ef501e; /* coral sands */	
+	color:#e51e50; /* coral sands */
+	opacity: 0.8;
+	filter:alpha(opacity=80);		
 	outline: 0;
 	text-decoration:none;
 
@@ -188,7 +192,7 @@ body,html{
 
 
 p.mobiliario{
-	line-height:20px;
+	line-height:25px;
 }
 
 .selector{
@@ -251,7 +255,7 @@ hr{
 	color: #FFFFFF;
 	background-color: #FFFFFF;
 	height: 1px;
-	width: 100%;
+	width: 50%;
 }
 
 html, body {
