--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -318,7 +318,7 @@ a.imagenboton2:focus{
 }
 
 .columnadcha{
-	background-color: #e2e2e2;
+	background-color: #f5f5f5;
 	padding:5px 10px;
 	border-bottom: 5px solid #FFFFFF; 
 }
