--- a/trunk/alquilook/css/alquilook.css
+++ b/trunk/alquilook/css/alquilook.css
@@ -243,8 +243,8 @@ hr.inquilino{
 }
 
 hr.inmueble{
-	color: #f5f5f5;
-	background-color:#f5f5f5;
+	color: #FFFFFF;
+	background-color:#FFFFFF;
 	height: 1px;
 	width:100%;
 	margin:5px;
@@ -320,7 +320,7 @@ a.imagenboton2:focus{
 .columnadcha{
 	background-color: #f5f5f5;
 	padding:5px 10px;
-	border-bottom: 5px solid #FFFFFF; 
+	border-bottom: 10px solid #FFFFFF; 
 }
 
 .tab-pane {
