--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -200,6 +200,7 @@ ul{
 
 .magenta-bg{
 	background-color: #e51e50;
+	color:#FFFFFF;
 }
 
 .coral{
@@ -208,6 +209,7 @@ ul{
 
 .coral-bg{
 	background-color: #ef501e;
+	color:#FFFFFF;
 }
 
 /*--------------------------------------------------------------------------------------------------------------------------------------------------------Otros--------------------*/
