--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -5080,16 +5080,16 @@ a.list-group-item-danger.active:focus {
   line-height: 1;
   color: #000;
   text-shadow: 0 1px 0 #fff;
-  filter: alpha(opacity=20);
-  opacity: .2;
+  filter: alpha(opacity=80);
+  opacity: .8;
 }
 .close:hover,
 .close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
-  filter: alpha(opacity=50);
-  opacity: .5;
+  filter: alpha(opacity=100);
+  opacity: 1;
 }
 button.close {
   -webkit-appearance: none;
