--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -5561,16 +5561,21 @@ button.close {
 }
 .carousel-caption {
   position: absolute;
-  right: 15%;
-  top: 1%;
-  left: 15%;
-  z-index: 10;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  background-color:rgba(255,255,255,0.75);
+  width: 30%;
+  padding: 0 10px;
+  margin-top:3%;
+  top:1px;
+  right: 60%;
+  left: 10%;
 }
+
+.carousel-caption h1 {
+  color:#000000;
+  opacity:1;
+  filter:alpha(opacity=100);
+}
+
 .carousel-caption .btn {
   text-shadow: none;
 }
@@ -5585,12 +5590,7 @@ button.close {
     margin-left: -15px;
     font-size: 30px;
   }
-  .carousel-caption {
-	  top:1%;
-    right: 20%;
-    left: 20%;
-    padding-bottom: 10px;
-  }
+
   .carousel-indicators {
     bottom: 20px;
   }
