--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -291,12 +291,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #e51e50;
+  color: #e72e45;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #e51e50;
+  color: #e72e45;
   text-decoration: underline;
 }
 a:focus {
@@ -501,7 +501,7 @@ cite {
   color: #999;
 }
 .text-primary {
-  color: #e51e50;
+  color: #e72e45;
 }
 a.text-primary:hover {
   color: #3071a9;
@@ -532,7 +532,7 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #e51e50;
+  background-color: #e72e45;
 }
 a.bg-primary:hover {
   background-color: #3071a9;
@@ -1708,7 +1708,7 @@ output {
           transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 .form-control:focus {
-  border-color: #e51e50;
+  border-color: #e72e45;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
@@ -2078,8 +2078,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #e51e50;
-  border-color: #e51e50;
+  background-color: #e72e45;
+  border-color: #e72e45;
   font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
   	opacity: 1.0;
 	filter:alpha(opacity=100);
@@ -2091,8 +2091,8 @@ fieldset[disabled] .btn-default.active {
 .open .dropdown-toggle.btn-primary {
   font-family: 'Lato', "Trebuchet MS", Arial, Helvetica, sans-serif !important;
   color: #fff;
-  background-color: #e51e50 ;
-  border-color: #e51e50 ;
+  background-color: #e72e45 ;
+  border-color: #e72e45 ;
   	opacity: 0.8;
 	filter:alpha(opacity=80);
 }
@@ -2289,7 +2289,7 @@ fieldset[disabled] .btn-danger.active {
 }
 .btn-link {
   font-weight: normal;
-  color: #e51e50;
+  color: #e72e45;
   cursor: pointer;
   border-radius: 0;
 }
@@ -2309,7 +2309,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #e51e50;
+  color: #e72e45;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3054,7 +3054,7 @@ input[type="button"].btn-block {
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #e51e50;
+  background-color: #e72e45;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
@@ -3470,14 +3470,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   display: block;
 }
 .nav > li > a {
-	color:#e51e50;
+	color:#e72e45;
   position: relative;
   display: block;
   padding: 15px 15px;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
-	color:#ef501e;
+	color:#d15627;
   text-decoration: none;
 }
 .nav > li.disabled > a {
@@ -3494,7 +3494,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eee;
-  border-color: #e51e50;
+  border-color: #e72e45;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3587,7 +3587,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #e51e50;
+  background-color: #e72e45;
 }
 .nav-stacked > li {
   float: none;
@@ -3784,7 +3784,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   outline: none;
 }
 .navbar-toggle .icon-bar {
-	background-color: #e51e50;
+	background-color: #e72e45;
   display: block;
   width: 22px;
   height: 3px;
@@ -4157,7 +4157,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.428571429;
-  color: #e51e50;
+  color: #e72e45;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4177,7 +4177,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #e51e50;
+  color: #e72e45;
   background-color: #eee;
   border-color: #ddd;
 }
@@ -4190,8 +4190,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   z-index: 2;
   color: #fff;
   cursor: default;
-  background-color: #e51e50;
-  border-color: #e51e50;
+  background-color: #e72e45;
+  border-color: #e72e45;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -4305,7 +4305,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #808080;
 }
 .label-primary {
-  background-color: #e51e50;
+  background-color: #e72e45;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
@@ -4435,7 +4435,7 @@ a.list-group-item.active > .badge,
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #e51e50;
+  border-color: #e72e45;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4546,7 +4546,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #e51e50;
+  background-color: #e72e45;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
   -webkit-transition: width .6s ease;
@@ -4970,18 +4970,18 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #e51e50;
+  border-color: #e72e45;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #e51e50;
-  border-color: #e51e50;
+  background-color: #e72e45;
+  border-color: #e72e45;
 }
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #e51e50;
+  border-top-color: #e72e45;
 }
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #e51e50;
+  border-bottom-color: #e72e45;
 }
 .panel-success {
   border-color: #d6e9c6;
